// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/table/calculation/CalculationRow should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="CalculationRow octo-table-row"
    >
      <div
        class="Calculation count octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Count
        </span>
        <span
          class="calculationValue"
        >
          2
        </span>
      </div>
      <div
        class="Calculation count octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Count
        </span>
        <span
          class="calculationValue"
        >
          2
        </span>
      </div>
      <div
        class="Calculation countValue octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Values
        </span>
        <span
          class="calculationValue"
        >
          1
        </span>
      </div>
      <div
        class="Calculation countUniqueValue octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Unique
        </span>
        <span
          class="calculationValue"
        >
          1
        </span>
      </div>
    </div>
  </span>
</div>
`;

exports[`components/table/calculation/CalculationRow should render three calculation elements 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="CalculationRow octo-table-row"
    >
      <div
        class="Calculation count octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Count
        </span>
        <span
          class="calculationValue"
        >
          2
        </span>
      </div>
      <div
        class="Calculation none octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Calculate
        </span>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="ExpandLessIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </div>
      <div
        class="Calculation none octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Calculate
        </span>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="ExpandLessIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </div>
      <div
        class="Calculation none octo-table-cell   "
        style="width: 100px;"
        tabindex="0"
      >
        <div />
        <span
          class="calculationLabel"
        >
          Calculate
        </span>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-qolhez-MuiSvgIcon-root"
          data-testid="ExpandLessIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
          />
        </svg>
      </div>
    </div>
  </span>
</div>
`;
